# modelo_recomendador

./: Makefile  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ml-pipeline-fixed.yml  ml-pipeline.yml
notebooks/: 01-clean_dataset.ipynb
src/pipelines/0-cleaning_data/: main.py  requirements.txt
src/pipelines/1-data_sampling/: main.py  preprocessing.py  requirements.txt  s3_con.py
src/pipelines/2-feature_engineering/: main.py  preprocessing.py
src/pipelines/3-training/: main.py
src/pipelines/data_validation/: main.py
